--- a/src/styles/jerseyView.css
+++ b/src/styles/jerseyView.css
@@ -1,3 +1,99 @@
-/* .view-jersey-box {
+.view-jersey-container {
+    display: flex;
+    justify-content: center;
+}
 
-} */
+.view-jersey-image {
+    height: 450px;
+    margin-top: 50px;
+    margin-right: 50px;
+}
+
+.view-jersey-image-box {
+    text-align: left;
+    display: flex;
+}
+
+.price-description {
+    max-width: 510px
+}
+
+.view-description {
+    font-size: 30px;
+    margin: 0;
+    margin-top: 30px
+}
+
+.view-price {
+    font-size: 20px;
+    font-weight: 700;
+    color: rgb(246, 0, 29);
+    margin-bottom: 20px;
+    margin-top: 17px;
+}
+
+.select-size {
+    width: 250px;
+    font-size: 18px;
+    padding: 10px;
+    font-family: Helvetica, sans-serif;
+    border: 1px solid rgb(176, 176, 176);
+}
+
+.wishlist-button {
+    width: 415px;
+    font-size: 18px;
+    padding: 16px;
+    margin-top: 20px;
+    background-color: #3A3A3A;
+    border: none;
+    color: whitesmoke;
+    font-family: Helvetica, sans-serif;
+}
+
+@media screen and (max-width: 1030px) {
+    .wishlist-button {
+        width: 250px;
+    }
+
+    .select-size {
+        width: 150px;
+    }
+
+    .view-description {
+        font-size: 25px;
+        margin: 0;
+        margin-top: 30px
+    }
+}
+
+@media screen and (max-width: 875px) {
+    .view-jersey-container {
+        display: flex;
+        justify-content: center;
+    }
+
+    .view-jersey-image {
+        height: 450px;
+        margin-top: 50px;
+        margin-right: 0;
+    }
+
+    .view-jersey-image-box {
+        text-align: left;
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 645px) {
+    .view-jersey-image {
+        height: 300px;
+    }
+}
+
+@media screen and (max-width: 470px) {
+    .view-jersey-image {
+        height: 240px;
+    }
+}
