--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -37,6 +37,7 @@
     display: flex;
     align-self: flex-end;
     font-family: 'PT Mono', monospace;
+    text-align: center;
 }
 
 @media screen and (max-width: 775px) {
