--- a/src/styles/jerseyView.css
+++ b/src/styles/jerseyView.css
@@ -85,3 +85,15 @@
         flex-direction: column;
     }
 }
+
+@media screen and (max-width: 645px) {
+    .view-jersey-image {
+        height: 300px;
+    }
+}
+
+@media screen and (max-width: 470px) {
+    .view-jersey-image {
+        height: 280px;
+    }
+}
