--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,8 +1,7 @@
 .navbar {
     display: grid;
     justify-content: center;
-    grid-template-columns: auto auto;
-    grid-template-rows: 50px 90px;
+    grid-template-rows: 90px;
     border-bottom: 1px solid rgb(179, 179, 179);
 }
 
@@ -17,6 +16,9 @@
 
 .navbar ul li {
     list-style: none;
+    font-size: 16px;
+    text-decoration: none;
+    color: rgb(99, 99, 99);
 }
 
 .navbar ul li a {
@@ -49,15 +51,20 @@
     font-family: 'PT Mono', monospace;
     text-align: center;
     width: 40vw;
+    text-decoration: none;
+    color: black;
 }
 
 .header-top {
-    float: right;
-    margin-right: auto;
+    position: absolute;
+    top: 10px;
+    left: 90%;
+    margin-right: 10px;
 }
 
 .header-top img {
-    height: 70px;
+    height: 60px;
+    border-radius: 50%;
 }
 
 @media screen and (max-width: 775px) {
@@ -68,6 +75,11 @@
     .navbar h3 {
         width: 60vw;
     }
+
+    .header-top {
+        left: 85%;
+        margin-right: 10px;
+    }
 }
 
 @media screen and (max-width: 550px) {
@@ -77,5 +89,17 @@
 
     .navbar h3 {
         width: 90vw;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .header-top {
+        left: 83%;
+        margin-right: 10px;
+    }
+
+    .header-top img {
+        height: 50px;
+        border-radius: 50%;
     }
 }
