--- a/src/styles/review.css
+++ b/src/styles/review.css
@@ -1,5 +1,6 @@
 p {
     margin: 0;
+    font-family: Helvetica, sans-serif;
 }
 
 .review-container {
@@ -14,7 +15,7 @@ p {
 
 .reviews {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
     grid-gap: 20px 15px;
     font-family: Helvetica, sans-serif;
     margin: 0 10px 50px 10px;
@@ -65,7 +66,6 @@ p {
     text-align: left;
     font-size: 18px;
     margin: 0 20px 20px 20px;
-
 }
 
 .fa-solid {
@@ -82,6 +82,22 @@ p {
     flex-direction: column;
     word-break: break-all;
     border: 1px solid black;
+    padding: 10px 0;
+}
+
+.username {
+    float: right;
+    margin-left: auto;
+    margin-right: 20px;
+    word-break: break-all;
+    color: rgb(45, 45, 45);
+    font-size: 17px;
+}
+
+.date {
+    text-align: left;
+    margin-left: 20px;
+    color:rgb(86, 86, 86);
 }
 
 @media screen and (max-width: 922px) {
